# redline

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  NOTES.md  README.md  ROADMAP.md  pyproject.toml  requirements.txt
.streamlit/: config.toml
config/: eval_events.yaml  settings.toml  watchlist.yaml
config/prompts/: correlator_v1.txt  diff_gate_v1.txt  diff_summary_v1.txt
scripts/: cleanup_form4_placeholders.py  snapshot_demo_db.py
spike/: backfill_prior.py  discover.py  form4_distribution.py  pltr_10k_riskdiff.md  pltr_10k_riskdiff_gated.md  pltr_10k_riskdiff_spike.py  probe_10q.py  probe_form4_10b5_1.py  smoke_llm_client.py  stage2_dryrun.py  verify.py  verify_ciks.py
src/redline/: config.py  fetcher.py  poller.py
src/redline/correlator/: analyzer.py  signals.py
src/redline/dashboard/: app.py
src/redline/diff/: analyzer.py  filter.py  gate.py  summarize.py
src/redline/eval/: grader.py  harness.py  models.py  replay.py
src/redline/llm/: client.py  log.py  schemas.py
src/redline/storage/: db.py  schema.py
tests/: test_correlator.py  test_diff_analyzer.py  test_diff_filter.py  test_eval_grader.py  test_fetcher.py  test_llm_client.py  test_poller.py  test_storage.py
